# k230_canmv

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.md
micropython_port/: CMakeLists.txt  Kconfig  Makefile  mpconfigport.h
micropython_port/3d-party/freetype/: Makefile
micropython_port/3d-party/lvgl/: Makefile
micropython_port/3d-party/wrap/: Makefile
micropython_port/ai_cube/: ai_cube.c  fuction_ocrdet.cpp  postprocess.cpp
micropython_port/ai_demo/: ai_demo.c  anchors_640.cpp  face_detection.cpp  face_mesh.cpp  face_parse.cpp  licence_det.cpp  nanotracker.cpp  object_segment.cpp  opencv_wrap.cpp  person_kp.cpp
micropython_port/ai_demo/kws/: kws_preprocess.cpp
micropython_port/ai_demo/tts_zh/: chronology.cpp  num.cpp  phonecode.cpp  pypinyin.cpp  quantifier.cpp  standard.cpp  text_normalization.cpp  utils_tts.cpp
micropython_port/boards/: manifest.py
micropython_port/boards/k230_canmv/: manifest.py  mpconfigboard.h
micropython_port/boards/k230_canmv_01studio/: mpconfigboard.h
micropython_port/boards/k230_canmv_only_rtt/: mpconfigboard.h
micropython_port/boards/k230_evb/: mpconfigboard.h
micropython_port/boards/k230d_canmv/: mpconfigboard.h
micropython_port/builtin_py/media/: sensor.py
micropython_port/builtin_py/media_todo/: player.py  pyaudio.py
micropython_port/builtin_py/mpp/: adec_def.py  ai_def.py  ai_struct.py  connector_def.py  mp4_format_struct.py  vb.py  vdec.py  vdec_struct.py  vicap_def.py  vo.py
micropython_port/builtin_py/mpp_binding/: connector_api.c
micropython_port/core/: main.c  modos.c  modtime.c  mphalport.c  mpthreadport.c
micropython_port/include/ai_demo/: aidemo_type.h  aidemo_wrap.h
micropython_port/include/core/: mpconfigport.h  mphalport.h  mpthreadport.h
micropython_port/include/kpu/: ai2d.h  kpu.h  nncase_type.h  nncase_wrap.h
micropython_port/include/machine/: machine_fpioa.h  machine_gpio.h  machine_i2c.h  machine_iomux_fpioa.h  machine_pin.h  machine_spi.h  machine_wdt.h
micropython_port/kpu/: Makefile.bak  ai2d.c  kpu.c  modnncase_runtime.c  nncase_wrap.cpp
micropython_port/machine/: machine_adc.c  machine_fft.c  machine_fpioa.c  machine_gpio.c  machine_i2c.c  machine_iomux_fpioa.c  machine_pwm.c  machine_rtc.c  machine_spi.c  machine_timer.c  machine_touch.c  machine_uart.c  machine_wdt.c  modmachine.c
micropython_port/media/: _sensor.py  camera.py  chunk.py  display.py  g711.py  lcd.py  media.py  mp4format.py  player.py  pyaudio.py  sensor.mpy  sensor.py  vdecoder.py  vencoder.py
micropython_port/micropython_overlay/extmod/: modcryptolib.c  modhashlib.c  modos.c  vfs_posix_file.c
micropython_port/micropython_overlay/py/: gc.c  qstrdefs.h  scheduler.c
micropython_port/modules/: modules.c
micropython_port/mpp/: adec_api.c  aenc_api.c  aenc_func_def.h  ai_func_def.h  ao_api.c  ao_func_def.h  connector_api.c  connector_func_def.h  func_def.h  modmpp.c  modmpp_api.c  mp4_format_api.c  mp4_format_func_def.h  pm_func_def.h  sys_api.c  sys_func_def.h  vb_api.c  vb_func_def.h  venc_api.c  venc_func_def.h  vicap_api.c  vicap_func_def.h  vo_api.c
micropython_port/mpp/mpp/: __init__.py  adec.py  adec_struct.py  aenc.py  aenc_def.py  aenc_struct.py  ai.py  ao.py  ao_def.py  ao_struct.py  audio_def.py  audio_struct.py  common_struct.py  connector.py  connector_def.py  connector_struct.py  mp4_format.py  mp4_format_def.py  pm.py  pm_def.py  pm_struct.py  sensor_struct.py  sys.py  sys_def.py  sys_struct.py  vb.py  vb_def.py  vb_struct.py  vdec.py  vdec_def.py  vdec_struct.py  venc.py  venc_def.py  venc_struct.py  vicap.py  vicap_def.py  vicap_struct.py  video_def.py  video_struct.py  vo.py  (+2 more)
micropython_port/omv/: ide_dbg.c  ide_dbg.h
micropython_port/omv/alloc/: fb_alloc.c  fb_alloc.h  umm_malloc.c  unaligned_memcpy.h
micropython_port/omv/common/: ff_wrapper.h
micropython_port/omv/imlib/: agast.c  apriltag.c  draw.c  fast.c  fmath.c  framebuffer.c  haar.c  hog.c  imlib.c  imlib.h  jpeg.c  jpegd.c  kmeans.c  lodepng.h  qrcode.c
micropython_port/omv/modules/: py_helper.c  py_image.c  py_imageio.c
micropython_port/socket_network/: ipcm_socket_network.c  ipcm_socket_network.h  modnetwork.c  network_wlan.c
micropython_port/ulab/code/: ndarray.c  ndarray.h  ulab.c
micropython_port/ulab/code/numpy/: create.c
(+697 files in other folders)
